Add test cases